# space-usage

./: .dockerignore  .gitignore  Dockerfile.linux  Dockerfile.windows  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-portable.ps1  build-portable.sh  build-windows-from-linux.sh  build-with-podman-volume.sh  build-with-podman.sh  gen-icons.mjs  install-fedora-deps.sh  install-rust.ps1  install-rust.sh  install-ubuntu-deps.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  scan.rs
