[package]
name = "space-usage-app"
version = "0.1.0"
description = "Fast disk usage analyzer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
rayon = "1"
tauri-plugin-dialog = "2"

